k8s-08/network-policy-object.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: network-policy
  name: sample-network-policy
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: test-network-policy
    - ports:
        - protocol: TCP
          port: 80
